Fix issue where example code on examples page goes off screen on mobile

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2533,7 +2533,7 @@ footer {
   }
   #exampleDisplay,
   #exampleFrame,
-  #exampleEditor {
+  #exampleDisplay #exampleEditor {
     width: 100%;
   }
   #exampleDisplay .edit_button {
@@ -2547,7 +2547,6 @@ footer {
   }
   #exampleEditor {
     margin-top: 3em;
-    width: 100%;
   }
   small,
   .small,
